  * Fix Boltzmann typo in `units.py` (PR #4214, Issue #4213)
  * Fix deletion of bond/angle/dihedral types (PR #4003, Issue #4001)
  * CRD, PQR, and PDBQT writers now write BZ2 and GZ files if requested
    (PR #4163, Issue #4159)

Enhancements
  * Added a `exclude_same` kwarg to InterRDF (PR #4161)
  * LAMMPSDump Reader use of `continuous` option to stitch trajectories
    (Issue #3546)

Changes
  * Removed `-ffast-math` compiler flag to avoid potentially incorrect
    floating point results in MDAnalysis *and* other codes when
    MDAnalysis shared libraries are loaded --- see 
    https://moyix.blogspot.com/2022/09/someones-been-messing-with-my-subnormals.html
    (Issues #3821, #4211)
  * Atom ID representation order updated to match that of associated
    AtomGroup indices.
    (PR #4191, Issue #4181)
  * Package license has been updated to GPLv3+ to better reflect the
    compatibility of GPLv2+ with Apache and GPLv3 licenced codes (PR #4219).
  * All new contributions are now made under LGPLv2.1+ (PR #4219).
  * Support for GSD is now limited to version 3.0.1 and above. Alongside this
    change, support for schema 1.3 files has been dropped (PR #4153)
  * Add definition of ts.data['time'] in LAMMPSDump Reader (Issue #3546)
  * As per NEP29 the minimum supported version has been raised to 1.22. We
    have opted to pin to a minimum of 1.22.3 to avoid known issues on some
    platforms.
  * GSD is no longer a core dependency of MDAnalysis. It must be installed
    independently if you wish to read HOOMD trajectory files.
    (PR #4174, Issue #3819)

Deprecations
  * Incorrectly spelt Boltzmann unit entry will be removed in version 2.8.0
    (PR #4230, Issue #4229)
  * The hole2 module is deprecated in favour of the the MDAKit:
    https://github.com/MDAnalysis/hole2-mdakit (Issue #4179, PR #4200)
  * MDAnalysis no longer officially supports 32 bit installations (they are
    no longer tested in our continuous integration pipelines). Note: whilst